# photonflux

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release_pypi.yml
docs/: CHANGELOG.md  ROADMAP.md  TODO.md
examples/: imbalanced_MZI.ipynb  imbalanced_MZI_test.ipynb  pn_junction_MZI.ipynb  ring_resonator.ipynb  ring_resonator_test.ipynb
photonflux/: __init__.py  circuit.py  component_models.py  mplstyle.mplstyle
photonflux/component_models/: Base_model.py  default_model_dict.py
photonflux/component_models/bends/: bend_circular.py  bend_euler.py
photonflux/component_models/heater/: TiN_heater.py  TiN_heater_modeling.ipynb  TiN_heater_sweep.pkl  TiN_heater_undercut.pkl  base_doped_heater.lms  doped_heater_modeling.ipynb  doped_heater_sweep.pkl  doped_heater_undercut_sweep.pkl
photonflux/component_models/laser/: laser.py
photonflux/component_models/photodetector/: photodetector.py
photonflux/component_models/pn_pin_junction/: MOSCAP_doping.pkl  U_doping.pkl  base_lateral_junction.lms  lateral_doping.pkl  lumerical_MOSCAP_junction_sweep.ipynb  lumerical_U_shaped_junction_sweep.ipynb  lumerical_junction_sweep.ipynb  lumerical_lateral_junction_sweep.ipynb  lumerical_vertical_junction_sweep.ipynb  pn_phase_shifter_design.ipynb  straight_pn.py  vertical_doping.pkl
photonflux/component_models/ring_resonators/: passive_rings.py  pn_ring.py
photonflux/component_models/splitters/: directional_coupler.py  mmi1x2.py  mmi2x2.py
photonflux/component_models/waveguides/: Si_rib_C_band.pkl  Si_rib_O_band.pkl  Si_strip_C_band.pkl  (+5 more)
(+3 files in other folders)
