# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "photonflux"
authors = [
    {name = "Alexander Sludds", email = "alexsludds@gmail.com"},
]
description = "Photonic circuit network simulator"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["eda", "photonics", "python"]
license = {file = "LICENSE"}
classifiers = [
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
]
version = "0.2.1"

dependencies = [
    "networkx",
    "matplotlib",
    "gdsfactory",
    "numpy",
    "scipy",
    "tqdm",
    "seaborn"
]

[project.optional-dependencies]

[tool.setuptools.packages]
find = {}

[tool.flit.sdist]
exclude = ["*.ldev","*.lms", "*.fsp","*.mat"]